--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    (header.header>(div.-item>h1.-title)+(div.-item>ul.-nav>li.nav__item*3))+(main.main>(div.additional>div.-container>(div.-picture>img)+(div.-item>h2.-title+p.-text+(dic.-buttom>img)))+(div.special>div.-container>(div.-item>div.-block*3)+(div.-item>(div.-picture>h2.-title+img)+(div.-copy>h3.-title+p.-text))))|bem
 </body>
 </html>
