--- a/index.html
+++ b/index.html
@@ -7,6 +7,48 @@
     <title>Document</title>
 </head>
 <body>
-    (header.header>(div.-item>h1.-title)+(div.-item>ul.-nav>li.nav__item*3))+(main.main>(div.additional>div.-container>(div.-picture>img)+(div.-item>h2.-title+p.-text+(dic.-buttom>img)))+(div.special>div.-container>(div.-item>div.-block*3)+(div.-item>(div.-picture>h2.-title+img)+(div.-copy>h3.-title+p.-text))))|bem
+    <header class="header">
+        <div class="header__item">
+            <h1 class="header__title"></h1>
+        </div>
+        <div class="header__item">
+            <ul class="header__nav">
+                <li class="nav header header_item"></li>
+                <li class="nav header header_item"></li>
+                <li class="nav header header_item"></li>
+            </ul>
+        </div>
+    </header>
+    <main class="main">
+        <div class="additional">
+            <div class="additional__container">
+                <div class="additional__picture"><img src="" alt=""></div>
+                <div class="additional__item">
+                    <h2 class="additional__title"></h2>
+                    <p class="additional__text"></p>
+                    <dic class="additional__buttom"><img src="" alt=""></dic>
+                </div>
+            </div>
+        </div>
+        <div class="special">
+            <div class="special__container">
+                <div class="special__item">
+                    <div class="special__block"></div>
+                    <div class="special__block"></div>
+                    <div class="special__block"></div>
+                </div>
+                <div class="special__item">
+                    <div class="special__picture">
+                        <h2 class="special__title"></h2>
+                        <img src="" alt="">
+                    </div>
+                    <div class="special__copy">
+                        <h3 class="special__title"></h3>
+                        <p class="special__text"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
