created reset and style

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </div>
         <div class="header__item">
             <ul class="header__nav">
-                <li class="nav header header_item"></li>
-                <li class="nav header header_item"></li>
-                <li class="nav header header_item"></li>
+                <li class="nav__header"></li>
+                <li class="nav__header"></li>
+                <li class="nav__header"></li>
             </ul>
         </div>
     </header>
