add conteiner and reset style

--- a/index.html
+++ b/index.html
@@ -4,34 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/reset.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Document</title>
 </head>
 <body>
     <header class="header">
-        <div class="header__item">
-            <h1 class="header__title"></h1>
-        </div>
-        <div class="header__item">
-            <ul class="header__nav">
-                <li class="nav__header"></li>
-                <li class="nav__header"></li>
-                <li class="nav__header"></li>
-            </ul>
+        <div class="conteiner">
+            <div class="header__item">
+                <h1 class="header__title"></h1>
+            </div>
+            <div class="header__item">
+                <ul class="header__nav">
+                    <li class="header__item"></li>
+                    <li class="header__item"></li>
+                    <li class="header__item"></li>
+                </ul>
+            </div>
         </div>
     </header>
     <main class="main">
         <div class="additional">
-            <div class="additional__container">
-                <div class="additional__picture"><img src="" alt=""></div>
+            <div class="conteiner">
+                <div class="additional__picture">
+                    <img src="" alt="">
+                </div>
                 <div class="additional__item">
-                    <h2 class="additional__title"></h2>
-                    <p class="additional__text"></p>
-                    <dic class="additional__buttom"><img src="" alt=""></dic>
+                    <h2 class="additional__title">
+
+                    </h2>
+                    <p class="additional__text">
+
+                    </p>
+                    <div class="additional__buttom"><img src="" alt=""></div>
                 </div>
             </div>
         </div>
-        <div class="special">
-            <div class="special__container">
+        <div class="conteiner">
+            <div class="special">
                 <div class="special__item">
                     <div class="special__block"></div>
                     <div class="special__block"></div>
