--- a/index.html
+++ b/index.html
@@ -12,13 +12,27 @@
     <header class="header">
         <div class="conteiner">
             <div class="header__item">
-                <h1 class="header__title"></h1>
+                <div class="header__logo">
+                    <img src="img/pageimage.png" alt="ковычьки">
+                </div>
+                <h1 class="header__title">
+                    Prechu
+                </h1>
             </div>
             <div class="header__item">
                 <ul class="header__nav">
-                    <li class="header__item"></li>
-                    <li class="header__item"></li>
-                    <li class="header__item"></li>
+                    <li class="header__item">
+                        Home
+                    </li>
+                    <li class="header__item--active">
+                        Products
+                    </li>
+                    <li class="header__item">
+                        Services
+                    </li>
+                    <li class="header__item">
+                        Contact
+                    </li>
                 </ul>
             </div>
         </div>
