created style for header and add font family

--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
         <div class="conteiner">
             <div class="header__item">
                 <div class="header__logo">
-                    <img src="img/pageimage.png" alt="ковычьки">
+                    <img src="img/pageimage.png" alt="ковычьки" class="logo">
                 </div>
                 <h1 class="header__title">
                     Prechu
                 </h1>
             </div>
-            <div class="header__item">
+            <div class="header__item--nav">
                 <ul class="header__nav">
-                    <li class="header__item">
+                    <li class="nav__item">
                         Home
                     </li>
-                    <li class="header__item--active">
+                    <li class="nav__item--active">
                         Products
                     </li>
-                    <li class="header__item">
+                    <li class="nav__item">
                         Services
                     </li>
-                    <li class="header__item">
+                    <li class="nav__item">
                         Contact
                     </li>
                 </ul>
