created style for additional

--- a/index.html
+++ b/index.html
@@ -40,17 +40,24 @@
     <main class="main">
         <div class="additional">
             <div class="conteiner">
-                <div class="additional__picture">
-                    <img src="" alt="">
+                <div class="additional__baner">
+                    <img src="img/iphon.png" alt="" class="additional__picture">
                 </div>
                 <div class="additional__item">
                     <h2 class="additional__title">
-
+                        Lorem Ipsum is simply
                     </h2>
                     <p class="additional__text">
-
+                        dummy text of the
+                        <br>
+                        printing & typesetting
                     </p>
-                    <div class="additional__buttom"><img src="" alt=""></div>
+                    <div class="additional__buttom">
+                        <img src="img/galochka.png" alt="" class="buttom__picture">
+                        <a href="#" class="buttom__link">
+                            Sing up now
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
