created style for first special item and add text to second special item

--- a/index.html
+++ b/index.html
@@ -61,21 +61,57 @@
                 </div>
             </div>
         </div>
-        <div class="conteiner">
-            <div class="special">
+        <div class="special">
+            <div class="conteiner">
                 <div class="special__item">
-                    <div class="special__block"></div>
-                    <div class="special__block"></div>
-                    <div class="special__block"></div>
+                    <div class="special__block">
+                        <div class="special__baner">
+                            <img src="img/pen.png" alt="" class="special__picture">
+                        </div>
+                        <h4 class="special__title">
+                            Contrary to popular
+                        </h4>
+                        <p class="special__text">
+                            Lorem Ipsum is not simply random text. It has roots in a piece
+                        </p>
+                    </div>
+                    <div class="special__block">
+                        <div class="special__baner baner__first">
+                            <img src="img/tv.png" alt="" class="special__picture">
+                        </div>
+                        <h4 class="special__title">
+                            Contrary to popular
+                        </h4>
+                        <p class="special__text">
+                            Lorem Ipsum is not simply random text. It has roots in a piece
+                        </p>
+                    </div>
+                    <div class="special__block">
+                        <div class="special__baner baner__second">
+                            <img src="img/karzina_wight.png" alt="" class="special__picture">
+                        </div>
+                        <h4 class="special__title">
+                            Contrary to popular
+                        </h4>
+                        <p class="special__text">
+                            Lorem Ipsum is not simply random text. It has roots in a piece
+                        </p>
+                    </div>
                 </div>
-                <div class="special__item">
+                <div class="special__item special__item--special">
                     <div class="special__picture">
-                        <h2 class="special__title"></h2>
-                        <img src="" alt="">
+                        <h2 class="special__title">
+                            The Shopping cart
+                        </h2>
+                        <img src="img/karzina.png" alt="">
                     </div>
                     <div class="special__copy">
-                        <h3 class="special__title"></h3>
-                        <p class="special__text"></p>
+                        <h3 class="special__title">
+                            Some Bullet text here
+                        </h3>
+                        <p class="special__text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting Lorem Ipsum has been the industry's standard dummy text ever When an unknown printer took a galley of type and scrambled It to make a type specimen book. It has survived not only five centuriesBut also the leap into electronic typesetting,Remaining essentially unchanged. It was popularised The release of Letraset sheets containing Lorem Ipsum passages
+                        </p>
                     </div>
                 </div>
             </div>
