--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="additional">
             <div class="conteiner">
                 <div class="additional__baner">
-                    <img src="img/iphon.png" alt="" class="additional__picture">
+                    <img src="img/iphon.png" alt="айфон" class="additional__picture">
                 </div>
                 <div class="additional__item">
                     <h2 class="additional__title">
@@ -53,7 +53,7 @@
                         printing & typesetting
                     </p>
                     <div class="additional__buttom">
-                        <img src="img/galochka.png" alt="" class="buttom__picture">
+                        <img src="img/galochka.png" alt="галочка" class="buttom__picture">
                         <a href="#" class="buttom__link">
                             Sing up now
                         </a>
@@ -66,7 +66,7 @@
                 <div class="special__item">
                     <div class="special__block">
                         <div class="special__baner">
-                            <img src="img/pen.png" alt="" class="special__picture">
+                            <img src="img/pen.png" alt="карандаш белый" class="special__picture">
                         </div>
                         <h4 class="special__title">
                             Contrary to popular
@@ -77,7 +77,7 @@
                     </div>
                     <div class="special__block">
                         <div class="special__baner baner__first">
-                            <img src="img/tv.png" alt="" class="special__picture">
+                            <img src="img/tv.png" alt="телевизор белый" class="special__picture">
                         </div>
                         <h4 class="special__title">
                             Contrary to popular
@@ -88,7 +88,7 @@
                     </div>
                     <div class="special__block">
                         <div class="special__baner baner__second">
-                            <img src="img/karzina_wight.png" alt="" class="special__picture">
+                            <img src="img/karzina_wight.png" alt="белая карзина" class="special__picture">
                         </div>
                         <h4 class="special__title">
                             Contrary to popular
@@ -98,24 +98,31 @@
                         </p>
                     </div>
                 </div>
-                <div class="special__item special__item--special">
-                    <div class="special__picture">
-                        <h2 class="special__title">
-                            The Shopping cart
-                        </h2>
-                        <img src="img/karzina.png" alt="">
-                    </div>
-                    <div class="special__copy">
-                        <h3 class="special__title">
-                            Some Bullet text here
-                        </h3>
-                        <p class="special__text">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting Lorem Ipsum has been the industry's standard dummy text ever When an unknown printer took a galley of type and scrambled It to make a type specimen book. It has survived not only five centuriesBut also the leap into electronic typesetting,Remaining essentially unchanged. It was popularised The release of Letraset sheets containing Lorem Ipsum passages
-                        </p>
-                    </div>
-                </div>
             </div>
         </div>
+        <div class="pramery">  
+            <div class="container__pramery">
+                <div class="pramery__baner">
+                    <h2 class="baner__title--pramery">
+                        The Shopping cart
+                    </h2>
+                    <img src="img/karzina.png" alt="карзина" class="baner__picture--pramery">
+                </div>
+                <div class="pramery__copy">
+                    <h3 class="pramery__title">
+                        Some Bullet text here
+                    </h3>
+                    <p class="pramery__text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting Lorem Ipsum has been the industry's standard dummy text ever When an unknown printer took a galley of type and scrambled It to make a type specimen book. It has survived not only five centuriesBut also the leap into electronic typesetting,Remaining essentially unchanged. It was popularised The release of Letraset sheets containing Lorem Ipsum passages
+                    </p>
+                </div>
+            </div>              
+        </div>
     </main>
+    <footer class="footer">
+        <h5 class="footer__title">
+            Copyright &copy; 2012-2013 cssauthor.com
+        </h5>
+    </footer>
 </body>
 </html>
