--- a/index.html
+++ b/index.html
@@ -22,16 +22,24 @@
             <div class="header__item--nav">
                 <ul class="header__nav">
                     <li class="nav__item">
-                        Home
+                        <a href="#" class="nav__link">
+                            Home
+                        </a>
                     </li>
                     <li class="nav__item--active">
-                        Products
+                        <a href="#" class="nav__link">
+                            Products
+                        </a>
                     </li>
                     <li class="nav__item">
-                        Services
+                        <a href="#" class="nav__link">
+                            Services
+                        </a>
                     </li>
                     <li class="nav__item">
-                        Contact
+                        <a href="#" class="nav__link">
+                            Contact
+                        </a>
                     </li>
                 </ul>
             </div>
